@@ -1,28 +1,24 @@
 #include <stdio.h>
 #include <stdlib.h>
-#include <unistd.h>
 #include <AL/alut.h>
 
 /*
-  This is a minimal test of error handling.
-*/
+ * This is a minimal test for error handling.
+ */
 
 int
 main (int argc, char **argv)
 {
-  ALuint file1Buffer;
+  ALuint buffer;
 
   alutInit (&argc, argv);
-
-  file1Buffer = alutCreateBufferFromFile ("no_such_file_in_existance.wav");
-
-  if (file1Buffer == 0)
-    {
-      fprintf (stderr, "Error loading wav file: '%s'\n",
-               alutGetErrorString (alutGetError ()));
-      exit (EXIT_FAILURE);
-    }
-
+  buffer = alutCreateBufferFromFile ("no_such_file_in_existance.wav");
   alutExit ();
+
+  if (buffer != AL_NONE)
+    {
+      fprintf (stderr, "expected an I/O error\n");
+      return EXIT_FAILURE;
+    }
   return EXIT_SUCCESS;
 }
