@@ -10,6 +10,8 @@
 int
 main (int argc, char **argv)
 {
+  ALboolean ok = AL_FALSE;
+
   alutInit (&argc, argv);
 
 #ifdef ALUT_API_MAJOR_VERSION
@@ -17,7 +19,7 @@ main (int argc, char **argv)
       alutGetMinorVersion () != ALUT_API_MINOR_VERSION)
     {
       fprintf (stderr,
-               "WARNING: The ALUT library is version %d.%d.x but the alut.h says it's %d.%d.x!!\n",
+               "WARNING: The ALUT library is version %d.%d.x but <AL/alut.h> says it's %d.%d.x!\n",
                alutGetMajorVersion (), alutGetMinorVersion (),
                ALUT_API_MAJOR_VERSION, ALUT_API_MINOR_VERSION);
     }
@@ -25,13 +27,14 @@ main (int argc, char **argv)
     {
       fprintf (stderr, "The ALUT library is at version %d.%d.x.\n",
                alutGetMajorVersion (), alutGetMinorVersion ());
+      ok = AL_TRUE;
     }
 #else
-  fprintf (stderr, "WARNING: Your copy of AL/alut.h is pre-1.0.0\n");
-  fprintf (stderr, "But you are running the ALUT test suite from ALUT\n");
+  fprintf (stderr, "WARNING: Your copy of <AL/alut.h> is pre-1.0.0,\n");
+  fprintf (stderr, "but you are running the ALUT test suite from ALUT\n");
   fprintf (stderr, "version 1.0.0 or later.\n");
 #endif
 
   alutExit ();
-  return EXIT_SUCCESS;
+  return ok ? EXIT_SUCCESS : EXIT_FAILURE;
 }
